// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Endpoint > #handleResult > Should handle errors within ResultHandler 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": AssertionError({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;

exports[`Endpoint > #parseOutput > Should throw on output validation failure 1`] = `
{
  "error": {
    "message": "output.email: Invalid email address",
  },
  "status": "error",
}
`;

exports[`Endpoint > .getResponses() > should return the negative responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "examples": [
        {
          "error": {
            "message": "Sample error message",
          },
          "status": "error",
        },
      ],
      "properties": {
        "error": {
          "additionalProperties": false,
          "properties": {
            "message": {
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
        "status": {
          "const": "error",
          "type": "string",
        },
      },
      "required": [
        "status",
        "error",
      ],
      "type": "object",
    },
    "statusCodes": [
      400,
    ],
  },
]
`;

exports[`Endpoint > .getResponses() > should return the positive responses (readonly) 1`] = `
[
  {
    "mimeTypes": [
      "application/json",
    ],
    "schema": {
      "$schema": "https://json-schema.org/draft/2020-12/schema",
      "additionalProperties": false,
      "properties": {
        "data": {
          "additionalProperties": false,
          "properties": {
            "something": {
              "type": "number",
            },
          },
          "required": [
            "something",
          ],
          "type": "object",
        },
        "status": {
          "const": "success",
          "type": "string",
        },
      },
      "required": [
        "status",
        "data",
      ],
      "type": "object",
    },
    "statusCodes": [
      200,
    ],
  },
]
`;

exports[`Endpoint > .getResponses() > should throw when the Endpoint declares a status code uncovered by the multi-schema ResultHandler 1`] = `
ResultHandlerError({
  "cause": Error({
    "message": "The ResultHandler defines multiple positive response schemas, but the overriding status code 204 of the Endpoint is not listed for any of them, therefore it is unclear how such override would be handled. Consider adding it to ResultHandler.",
  }),
  "message": "The ResultHandler defines multiple positive response schemas, but the overriding status code 204 of the Endpoint is not listed for any of them, therefore it is unclear how such override would be handled. Consider adding it to ResultHandler.",
})
`;

exports[`Endpoint > .getResponses() > should throw when the Endpoint declares a status code uncovered by the multi-schema ResultHandler 2`] = `
ResultHandlerError({
  "cause": Error({
    "message": "The ResultHandler defines multiple negative response schemas, but the overriding status codes 404, 502 of the Endpoint are not listed for any of them, therefore it is unclear how such overrides would be handled. Consider adding them to ResultHandler.",
  }),
  "message": "The ResultHandler defines multiple negative response schemas, but the overriding status codes 404, 502 of the Endpoint are not listed for any of them, therefore it is unclear how such overrides would be handled. Consider adding them to ResultHandler.",
})
`;

exports[`Endpoint > Issue #585: Handling non-Error exceptions > thrown in #handleResult() 1`] = `
[
  [
    "Result handler failure",
    ResultHandlerError({
      "cause": Error({
        "message": "Something unexpected happened",
      }),
      "message": "Something unexpected happened",
    }),
  ],
]
`;
